--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Littlemojo Projects</title>
 
-<a href="/bingo.html">Bingo Card Generator 2000</a>
+<a href="/bingo/bingo.html">Bingo Card Generator 2000</a>
 
 </body>
 </html>
