Updated CSS and error handling.

--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -9,8 +9,10 @@ var bingoItemsList;
 var bingoItems;
 
 function generateBingoCard(items, rows = 5, cols = 5) {
+
 	if (items.length < rows * cols) {
-		document.getElementById('countList').innerHTML = "Minimum of " + (rows * cols) + " items needed.";
+		document.getElementById('countList').innerHTML = "Minimum of " + (rows * cols) + " items required.";
+		throw new Error("Minimum of " + (rows * cols) + " items required.");
 	}
 
 	items = [...items].sort(() => Math.random() - 0.5);
@@ -73,6 +75,13 @@ function genBingoCards(){
 	
 	var cardnum = document.getElementById('numcards').value;
 	
+	cardnum
+	
+	if (cardnum < 1) {
+		document.getElementById('countList').innerHTML = "Minimum of 1 card required.";
+		throw new Error("Minimum of 1 card required.");
+	}
+	
 	roundName = document.getElementById('roundTitle').value
 	
 	//Display Number of Items in the List
@@ -89,6 +98,8 @@ function genBingoCards(){
 
 <style>
 	
+
+	h1 {color: #fff; font-family: sans-serif; font-style: italic;font-variant: small-caps; border-bottom: 1px solid black; text-shadow: -3px -3px 6px #008ab7, 3px 3px 6px #00ad72;}
 	#bingo-card td {width: 123px; height: 83px; padding: 0 5px 0 5px;}
 	#bingo-card td p {display: block; font-size: 1em;}
 	#bingo-card table {table-layout: fixed; margin-top: 0;  margin-bottom: 0; margin-left: 30px; border-collapse: collapse; break-inside: avoid; background-size: 30%; background-image: url("logo.png");background-color: rgba(255,255,255,0.92);background-blend-mode: lighten;}
@@ -97,30 +108,26 @@ function genBingoCards(){
 	#bingo-card tr, td {word-break: break-word; font-family: sans-serif; border: 1px solid #000; text-align: center; border-collapse: collapse; text-shadow: 0px 0px 5px #fff; paint-order: stroke fill; -webkit-text-stroke: 4px #fff;  }
 	#bingo-card table tr:nth-child(1) td, #bingo-card table tr:nth-child(7) td  {height: 23px; background-color: #666; color: #fff; font-weight: bold; text-shadow: 0px 0px 6px #000; font-style: italic; -webkit-text-stroke: 0;}
 
-
 	@media print {
 	   .noPrint {display:none;}
+	   body {margin: 0; padding: 0;}
 	}
 
 </style>
 
 </head>
-<body>
+<body><div class="noPrint">
 
-<div class="noPrint">
 	<h1>Bingo Card Generator 2000</h1>
 	<form>
 		<label for="numcards">Number of Cards:</label>
-		<input type="text" id="numcards" name="numcards" value=50><br/>
+		<input type="number" id="numcards" name="numcards" value="50" min="1" max="200" required><br/>
 		<label for="numcards">Round Title:</label>
 		<input type="text" id="roundTitle" name="roundTitle"><br/>
 		<textarea id="textList" name="textList" rows="15" cols="55" wrap="off"></textarea><br/>
-		<button type="submit" form="form1" value="Generate Cards" onclick="genBingoCards();">Generate Cards</button>
+		<button type="button" form="form1" value="Generate Cards" onclick="genBingoCards();">Generate Cards</button>
 		<label id="countList"></label>
 	</form>
-</div>
 
-<div id="bingo-card"></div>
-
-</body>
+</div><div id="bingo-card"></div></body>
 </html>
