--- a/card.html
+++ b/card.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Bingo Card Generator 2000</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="application/javascript">
 
 var roundName = "";
@@ -203,7 +204,7 @@ function genBingoCards(){
 
 <style type="text/css">
 
-	body {padding: 20px; background-size: 30%; background-image: url("logo.png"); background-color: rgba(225,245,255,1); background-blend-mode: soft-light;}
+	body {padding-top: 20px; background-size: 30%; background-image: url("logo.png"); background-color: rgba(225,245,255,1); background-blend-mode: soft-light;}
 	h1 {color: #fff; font-family: sans-serif; font-style: italic;font-variant: small-caps; text-shadow: -3px -3px 6px #008ab7, 3px 3px 6px #00ad72; margin-top: 0;}
 	label {font-family: sans-serif;}
 	#bingo-card td {width: 123px; height: 90px; padding: 0 5px 0 5px;}
