--- a/card.html
+++ b/card.html
@@ -209,7 +209,7 @@ function genBingoCards(){
 	label {font-family: sans-serif;}
 	#bingo-card td {width: 123px; height: 90px; padding: 0 5px 0 5px;}
 
-	#bingo-card table {width: 680px; table-layout: fixed; margin: 0 auto; border-collapse: collapse; break-inside: avoid; box-shadow: 4px 4px 9px 0  rgba(0,0,0,0.4);}
+	#bingo-card table {width: 680px; table-layout: fixed; margin: 0 auto; border-collapse: collapse; break-inside: avoid;}
 	#bingo-card table.bg {background-color: #fff;}
 	
 	/* Spacing for every other card */
